--- a/index.html
+++ b/index.html
@@ -13,10 +13,27 @@
     <header>
         <nav>
             <div class="navbar">
+                <div class="navbar-sx">
+                    <img src="img/logo-small.png" alt="">
+                    <ul>
+                        <li><a href="">Perchè Dropbox</a></li>
+                        <li><a href="">Funzioni</a></li>
+                        <li><a href="">Piani e prezzi</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-dx">
+                    <ul>
+                        <li><a href="">Supporto</a></li>
+                        <li><a href="">Contatta l'ufficio vendite</a></li>
+                        <li><a href="">Accedi</a></li>
+                    </ul>
+                    <button class="start">Inizia</button>
+                </div>
+
 
             </div>
-            <section>
-                
+            <section class="container">
+
             </section>
         </nav>
  
