--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav>
             <div class="navbar">
                 <div class="navbar-sx">
-                    <img src="img/logo-small.png" alt="">
+                    <img class="logo" src="img/logo-small.png" alt="">
                     <ul>
                         <li><a href="">Perchè Dropbox</a></li>
                         <li><a href="">Funzioni</a></li>
