--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
 
 
             </div>
-            <section class="container">
+            <section class="head-section">
+                <h1 class="title">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
+                <div class="content">
+                    <div class="text"><p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è piu di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                        <button>Inizia la prova gratuita</button>
+                        <p>Annulla in qualsiasi momento</p>
+                        <i class="fa-solid fa-arrow-down arrow"></i>
+                    </div>
+
+                    <div class="img"><img src="img/jumbo.png" alt=""></div>
+
+                </div>
 
             </section>
         </nav>
