--- a/index.html
+++ b/index.html
@@ -35,13 +35,14 @@
             <section class="head-section">
                 <h1 class="title">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
                 <div class="content">
+                    
                     <div class="text"><p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è piu di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button>Inizia la prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down arrow"></i>
                     </div>
 
-                    <div class="img"><img src="img/jumbo.png" alt=""></div>
+                    <div class="img"></div>
 
                 </div>
 
@@ -50,6 +51,13 @@
  
     </header>
     <main>
+        <section class="options">
+            <div class="option"></div>
+            <div class="option"></div>
+            <div class="option"></div>
+            <div class="option-x"></div>
+
+        </section>
 
     </main>
     <footer>
