add titles to the four card below the jumbo

--- a/index.html
+++ b/index.html
@@ -53,13 +53,30 @@
  
     </header>
     <main>
-        <section class="options">
-            <div class="option"></div>
-            <div class="option"></div>
-            <div class="option"></div>
-            <div class="option-x"></div>
+        <div class="content">
+            <div class="sub-title">
+                <h2 class="title-2">Trova il piano busines che fa per te</h2>
+                <p>Fatturazione mensile</p>
+                <p>Fatturazione annuale</p>
+            </div>
+            <div class="options">
+                
+                <div class="option">
+                    <div class="option-title">Singolo</div>
+                </div>
+                <div class="option">
+                    <div class="option-title">Team</div>
+                </div>
+                <div class="option">
+                    <div class="option-title">Azienda</div>
 
-        </section>
+                </div>
+                <div class="option-x">
+                    <div class="option-title">Team</div>
+                </div>
+    
+            </div>
+        </div>
         <section class="content c2">
             <div class="text">
                 <h1>Entra in contatto con un partner Dropbox</h1>
