add first option card

--- a/index.html
+++ b/index.html
@@ -63,6 +63,29 @@
                 
                 <div class="option">
                     <div class="option-title">Singolo</div>
+                    <div class="info">
+                        <h3>Professional</h3>
+                        <p class="euro">&euro; 12.00</p>
+                        <p class="time">/mese</p>
+                        <div class="option-list">
+                            <ul>
+                                <li>1 Utente</li>
+                                <li>5 TB di spazio di archiviazione sicuro</li>
+                                <li>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            </ul>
+                        </div>
+                        <button>Prova gratis per 30 giorni</button>
+                        <p class="link">Oppure <a href="">acquista ora</a></p>
+                        <hr>
+                        <h4>Punti salienti del piano</h4>
+                        <div class="option-list">
+                            <ul>
+                                <li>Invia fino a 100 GB con Dropbox Transfert</li>
+                                <li>Cartelle online su dispostivi mobili</li>
+                            </ul>
+                        </div>
+                        
+                    </div>
                 </div>
                 <div class="option">
                     <div class="option-title">Team</div>
