--- a/index.html
+++ b/index.html
@@ -263,12 +263,20 @@
 
       <div class="square">
         <div class="square-sx">
-
+            <div class="sub-square sq1"></div>
+            <div class="sub-square sq2"></div>
+            <div class="sub-square sq3"></div>
+            <div class="sub-square sq4"></div>
+          
         </div>
         <div class="square-cnt">
 
         </div>
         <div class="square-dx">
+            <div class="sub-square sq5"></div>
+            <div class="sub-square sq6"></div>
+            <div class="sub-square sq7"></div>
+            <div class="sub-square sq8"></div>
 
         </div>
         
