--- a/index.html
+++ b/index.html
@@ -263,20 +263,40 @@
 
       <div class="square">
         <div class="square-sx">
-            <div class="sub-square sq1"></div>
-            <div class="sub-square sq2"></div>
-            <div class="sub-square sq3"></div>
-            <div class="sub-square sq4"></div>
+            <div class="sub-square sq1">
+                <img class="sq-img" src="img/designit.svg" alt="">
+            </div>
+            <div class="sub-square sq2">
+                <img class="sq-img" src="img/arizona_state_university.svg" alt="">
+            </div>
+            <div class="sub-square sq3">
+                <img class="sq-img" src="img/university_of_florida.svg" alt="">
+            </div>
+            <div class="sub-square sq4">
+                <img class="sq-img" src="img/topps.svg" alt="">
+            </div>
           
         </div>
         <div class="square-cnt">
+            <img class="sq-img-cnt" src="img/designit.svg" alt="">
+            <hr>
+            <p>"I membri del nostro team lavorano costantemente in paesi, fusi orari, e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è semplice come Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper."</p>
+            <p>Morten Thomsen, Global IT lead</p>
 
         </div>
         <div class="square-dx">
-            <div class="sub-square sq5"></div>
-            <div class="sub-square sq6"></div>
-            <div class="sub-square sq7"></div>
-            <div class="sub-square sq8"></div>
+            <div class="sub-square sq5">
+                <img class="sq-img" src="img/world_bicycle_relief.svg" alt="">
+            </div>
+            <div class="sub-square sq6">
+                <img class="sq-img" src="img/hearst_corp.svg" alt="">
+            </div>
+            <div class="sub-square sq7">
+                <img class="sq-img" src="img/lonely_planet.svg" alt="">
+            </div>
+            <div class="sub-square sq8">
+                <img class="sq-img" src="img/clear_channel.svg" alt="">
+            </div>
 
         </div>
         
