add padding and font-size to section with partner img

--- a/index.html
+++ b/index.html
@@ -305,6 +305,11 @@
       <section class="s-6">
         <h2 class="title-6">Porta Dropbox Business nella tua azienda.</h2>
         <button>Inizia la tua prova gratuita</button>
+        
+      </section>
+
+      <section class="s-7">
+        <h2 class="title-7">Domande frequenti</h2>
 
       </section>
         
