--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                 <h1 class="title">Tutto cio che ti serve per il lavoro, in un unico posto</h1>
                 <div class="content">
                     
-                    <div class="text"><p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è piu di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
+                    <div class="text">
+                        <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è piu di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button>Inizia la prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
-                        <a href=""><i class="fa-solid fa-arrow-down arrow"></i></a>
+                        <a href="#square"><i class="fa-solid fa-arrow-down arrow"></i></a>
                     </div>
 
                     <img class="jumbo" src="img/jumbo.png" alt="">
@@ -260,7 +261,7 @@
 
       </section>  
 
-      <div class="square">
+      <div id="square">
         <div class="square-sx">
             <div class="sub-square sq1">
                 <img class="sq-img" src="img/designit.svg" alt="">
