add dropdown menu

--- a/index.html
+++ b/index.html
@@ -14,17 +14,46 @@
             <div class="navbar">
                 <div class="navbar-sx">
                     <img class="logo" src="img/logo-small.png" alt="">
-                    <ul>
+                    <ul class="dropdown">
                         <li><a href="">Perchè Dropbox</a></li>
+                        <div class="dropdown-menu">
+                            <div class="menu">Perchè Dropbox</div>
+                            <div class="menu">Perchè Dropbox</div>
+                            <div class="menu">Perchè Dropbox</div>
+                            <div class="menu">Perchè Dropbox</div>
+                        </div>
                         <li><a href="">Funzioni</a></li>
+                        <div class="dropdown-menu d-m2">
+                            <div class="menu">Funzioni</div>
+                            <div class="menu">Funzioni</div>
+                            <div class="menu">Funzioni</div>
+                            <div class="menu">Funzioni</div>
+                        </div>
                         <li><a href="">Piani e prezzi</a></li>
+                        <div class="dropdown-menu d-m3">
+                            <div class="menu">Piani e prezzi</div>
+                            <div class="menu">Piani e prezzi</div>
+                            <div class="menu">Piani e prezzi</div>
+                            <div class="menu">Piani e prezzi</div>
+                        </div>
                     </ul>
                 </div>
                 <div class="navbar-dx">
-                    <ul>
+                    <ul class="dropdown">
                         <li><a href="">Supporto</a></li>
+                        <div class="dropdown-menu">
+                            <div class="menu">Supporto</div>
+                            <div class="menu">Supporto</div>
+                            <div class="menu">Supporto</div>
+                            <div class="menu">Supporto</div>
+                        </div>
                         <li><a href="">Contatta l'ufficio vendite</a></li>
+                        <div class="dropdown-menu d-m2">
+                            <div class="menu">Ufficio vendite</div>
+                            <div class="menu">Ufficio vendite</div>
+                        </div>
                         <li><a href="">Accedi</a></li>
+                        
                     </ul>
                     <button class="start">Inizia</button>
                 </div>
@@ -310,6 +339,7 @@
 
       <section class="s-7">
         <h2 class="title-7">Domande frequenti</h2>
+
 
       </section>
         
