ad section 7 and footer a hover effects

--- a/index.html
+++ b/index.html
@@ -339,6 +339,13 @@
 
       <section class="s-7">
         <h2 class="title-7">Domande frequenti</h2>
+        <hr>
+        <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></p>
+        <hr>
+        <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></p>
+        <hr>
+        <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></p>
+        <hr>
 
 
       </section>
