add dropdown menu on section 7

--- a/index.html
+++ b/index.html
@@ -340,12 +340,31 @@
       <section class="s-7">
         <h2 class="title-7">Domande frequenti</h2>
         <hr>
-        <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></p>
+        <div class="dropdown">
+            <a><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></a>
+            <div class="dropdown-menu d-m4">
+               <div class="menu">Coming soon</div>
+            </div>
+
+        </div>
         <hr>
-        <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></p>
+        <div class="dropdown">
+            <a><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></a>
+            <div class="dropdown-menu d-m4">
+               <div class="menu">Coming soon</div>
+            </div>
+
+        </div>
         <hr>
-        <p><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></p>
-        <hr>
+        <div class="dropdown">
+            <a><strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced <i class="fa-solid fa-angle-down"></i></strong></a>
+            <div class="dropdown-menu d-m4">
+               <div class="menu">Coming soon</div>
+            </div>
+
+        </div>
+        
+        
 
 
       </section>
